--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
               <a href="index.html#projects" class="nav-link"><h3>PROJECTS</h3></a>
             </nav>
           </header>    
-          <img id="mainImage" src="images/derron.jpg">
+          <img id="mainImage" src="digitalPortfolio/images/derron.jpg">
           <div id="descriptionText"style="display: inline-block; padding-left: 20px; width: 50%; padding-top: 100px;">
             <h1 style="padding-bottom: 8px; letter-spacing: 1px;">DERRON FOO</h1>
             <h2 style="padding-bottom: 0px;">/ THE • RO • N /</h2>
