--- a/VAP.html
+++ b/VAP.html
@@ -59,7 +59,7 @@
             </nav>
           </header>
           <article class="article group">
-            <img class="image right" src="/images/greenPlan.png" alt="Image" style="position: relative; top: 15px;height: auto; max-width: 300px; aspect-ratio: 1/1;">
+            <img class="image right" src="images/greenPlan.png" alt="Image" style="position: relative; top: 15px;height: auto; max-width: 300px; aspect-ratio: 1/1;">
             <section class="content">
               <h2 class="headline">Visual Analytics Case Study - Resilient Future</h2>
               <h3>SKILLSETS: <span class="bold">Power BI</span>, <span class="bold">Excel</span>, <span class="bold">Effective Communication</span></h3>
@@ -70,7 +70,7 @@
             </section>
           </article>
           <article class="article group">
-            <img class="image left" src="/images/environmentalAgency.jpg" alt="Image">
+            <img class="image left" src="images/environmentalAgency.jpg" alt="Image">
             <section class="content">
               <br><br><br>
               <h2 class="headline">Work Process ( Gaining Business Requirements )</h2>
@@ -79,7 +79,7 @@
             </section>
           </article>
           <article class="article group">
-            <img class="image right" src="/images/powerQuery.jpg" alt="Image" style="height: auto; max-width: 300px; aspect-ratio: 1/1;">
+            <img class="image right" src="images/powerQuery.jpg" alt="Image" style="height: auto; max-width: 300px; aspect-ratio: 1/1;">
             <section class="content">
               <br><br><br>
               <h2>Work Process ( Data Gathering and Preperation )</h2>
@@ -88,7 +88,7 @@
             </section>
           </article>
           <article class="article group">
-            <img class="image left" src="/images/drillthrough.png" alt="Image" style="width: auto; aspect-ratio: 1.65;">
+            <img class="image left" src="images/drillthrough.png" alt="Image" style="width: auto; aspect-ratio: 1.65;">
             <section class="content">
               <h2 class="headline">Work Process ( Visualisation Development )</h2>
               <h3>With all the preparation done, it was time to develop visualisations in Power BI that give key insights with the given data and requirements.</h3>
